--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -12,14 +12,12 @@ a:hover { text-decoration: underline; }
 
 
 /* Base Styles */
-html { background: #FFFFFF; font-family: Ubuntu; }
-
-#landing { width: 950px; margin: 0 auto; }
+#landing { width: 950px; margin: 0 auto; font-family: Ubuntu; }
 #landing h1 { padding: 50px 0; text-align: center; font-weight: bold; font-size: 90px; color: #FBB829; }
+#landing h2 { text-align: center; padding: 22px 32px 38px; font-weight: bold; font-size: 49px; color: #7FFF24; }
 #landing .left, #landing .right { width: 475px; float: left; }
 #landing .left img { display: block; margin: 0 auto; border: 25px solid #7FFF24; rounded-corner: 5px; }
-#landing .fb-login-button { display: table; margin: 0 auto; }
-#landing h2 { text-align: center; padding: 22px 32px 38px; font-weight: bold; font-size: 49px; color: #7FFF24; }
+#landing .right img { display: table; margin: 0 auto; }
 
 
 
