--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -4,17 +4,17 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
       <title>MengoMengo: Social TV</title>
       <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" type="text/css" href="/styles/main.css"/>
+      <link rel="stylesheet" type="text/css" href="/static/styles/main.css"/>
   </head>
   <body id="landing">
     <div class="left">
       <h1>めんご</h1>
-      <img src="/images/frog1.jpg" height="266" width="400"/>
+      <img src="/static/images/frog1.jpg" height="266" width="400"/>
     </div>
     <div class="right">
       <h1>めんご</h1>
       <h2>Login to see what your friends are watching</h2>
-      <img src="/images/fb1.jpg" style="cursor: pointer;"/>
+      <img src="/static/images/fb1.jpg" style="cursor: pointer;"/>
     </div> 
   </body>
 </html>
