--- a/app/views/myfeed.html
+++ b/app/views/myfeed.html
@@ -7,7 +7,8 @@
       <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
   </head>
   <body id="myfeed">
-    <ul id="feed">
+    <div class="left"></div>
+    <ul class="center">
       <li>
         <p><span class="friend">Jessica Ahern</span> likes <br/><span class="title">Cheezburgers Aladdin</span></p>
         <img src="{{ static_url('images/frog1.jpg') }}" height="133" width="200"/>
