Designing myfeed page.

--- a/app/views/myfeed.html
+++ b/app/views/myfeed.html
@@ -10,11 +10,11 @@
     <div class="left"></div>
     <ul class="center">
       <li>
-        <p><span class="friend">Jessica Ahern</span> likes <br/><span class="title">Cheezburgers Aladdin</span></p>
+        <p><span class="friend">Jessica Ahern</span> likes <span class="title">Cheezburgers Aladdin</span></p>
         <img src="{{ static_url('images/frog1.jpg') }}" height="133" width="200"/>
       </li>
       <li>
-        <p><span class="friend">Ninja Frog</span> suggests <br/><span class="title">Clear: Spring Album</span></p>
+        <p><span class="friend">Ninja Frog</span> suggests <span class="title">Clear: Spring Album</span></p>
         <img src="{{ static_url('images/frog1.jpg') }}" height="133" width="200"/>
       </li> 
     </ul>
