--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -26,9 +26,9 @@ body { width: 950px; margin: 0 auto; font-family: Ubuntu; }
 #myfeed .left { width: 200px; height: 100%; float: left; }
 #myfeed .center { width: 490px; margin: 10px; float: left; }
 #myfeed .right { }
-#myfeed li p { line-height: 1.3em; padding-bottom: 5px; }
+#myfeed li p { line-height: 1.3em; }
 #myfeed li { border-bottom: 1px solid #7FFF24; }
-#myfeed li img { border: 10px solid #7FFF24; }
+#myfeed li img { border: 10px solid #7FFF24; padding: 15px 0 10px; }
 .friend, .title { color: #FBB829; }
 
 
