--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -28,7 +28,7 @@ body { width: 950px; margin: 0 auto; font-family: Ubuntu; }
 #myfeed .right { }
 #myfeed li p { line-height: 1.3em; }
 #myfeed li { border-bottom: 1px solid #7FFF24; }
-#myfeed li img { border: 10px solid #7FFF24; padding: 15px 0 10px; }
+#myfeed li img { border: 10px solid #7FFF24; margin: 15px 0 10px; }
 .friend, .title { color: #FBB829; }
 
 
