--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en">
 
-  <head>
+  <!-- head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
       <title>MengoMengo: Social TV</title>
       <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css">
       <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
-  </head>
+  </head -->
 
-  <body id="landing">
-    <div class="left">
+  <body>
+    <!-- div class="left">
       <h1>めんご</h1>
       <img src="{{ static_url('images/frog1.jpg') }}" height="266" width="400"/>
-    </div>
-    <div class="right">
+    </div -->
+    <!-- div class="right">
       <h1>めんご</h1>
       <h2>Login to see what your friends are watching</h2>
       <img src="{{ static_url('images/fb1.jpg') }}" style="cursor: pointer;"/>
-    </div> 
+    </div --> 
 
 
     <div id="fb-root"></div>
