--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -18,7 +18,7 @@
 
   </head>
 
-  <body>
+  <body id="landing">
     <div class="left">
       <h1>めんご</h1>
       <img src="{{ static_url('images/frog1.jpg') }}" height="266" width="400"/>
