--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -1,16 +1,7 @@
 <html>
-  <head>
-      <script src="http://connect.facebook.net/en_US/all.js"></script>
-      <script>
-        FB.init({
-          appId  : '204128796282802',
-          status : true, // check login status
-          cookie : true, // enable cookies to allow the server to access the session
-          xfbml  : true  // parse XFBML
-        });
-      </script>
-  </head>
+  <head></head>
   <body>
     <div id="fb-root"></div>
+    <script src="http://connect.facebook.net/en_US/all.js"></script>
   </body>
 </html>
