--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+  </head>
   <body>
     <div id="fb-root"></div>
     <script src="http://connect.facebook.net/en_US/all.js"></script>
