--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -4,24 +4,24 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>MengoMengo: Social TV</title>
-    <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
   </head>
 
   <body id="landing">
     <div class="left">
       <h1>めんご</h1>
-      <img src="{{ static_url('images/frog1.jpg') }}" height="266" width="400"/>
+      <img src="{{ static_url('images/frog1.jpg') }}" height="266" width="400" alt/>
     </div>
     <div class="right">
       <h1>めんご</h1>
       <h2>Login to see what your friends are watching</h2>
-      <img src="{{ static_url('images/fb1.jpg') }}" style="cursor: pointer;"/>
+      <img src="{{ static_url('images/fb1.jpg') }}" style="cursor: pointer;" alt/>
     </div> 
 
     <div id="fb-root"></div>
-    <script src="http://connect.facebook.net/en_US/all.js"></script>
-    <script>
+    <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
+    <script type="text/javascript">
       FB.init({
         appId  : '204128796282802',
         status : true, // check login status
