Fixed xml validation

--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -11,12 +11,12 @@
   <body id="landing">
     <div class="left">
       <h1>めんご</h1>
-      <img src="{{ static_url('images/frog1.jpg') }}" height="266" width="400" alt/>
+      <img src="{{ static_url('images/frog1.jpg') }}" height="266" width="400" alt=""/>
     </div>
     <div class="right">
       <h1>めんご</h1>
       <h2>Login to see what your friends are watching</h2>
-      <img src="{{ static_url('images/fb1.jpg') }}" style="cursor: pointer;" alt/>
+      <img src="{{ static_url('images/fb1.jpg') }}" style="cursor: pointer;" alt=""/>
     </div> 
 
     <div id="fb-root"></div>
