Trying to get FB working... maybe

--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en">
 
   <head>
@@ -18,7 +18,7 @@
       <h2>Login to see what your friends are watching</h2>
       <img src="{{ static_url('images/fb1.jpg') }}" style="cursor: pointer;" alt=""/>
     </div> 
-
+-->
     <div id="fb-root"></div>
     <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
     <script type="text/javascript">
@@ -29,6 +29,7 @@
         xfbml  : true  // parse XFBML
       });
     </script>
-
+<!--
   </body>
 </html>
+-->
