--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="right">
-      <a onclick="FB.logout()" href="/">Logout</a>
+      <a onclick="FB.logout(); window.location='/'">Logout</a>
     </div>
 
     <div id="fb-root"></div>
