--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -16,7 +16,7 @@
     <div class="right">
       <h1>めんご</h1>
       <h2>Login to see what your friends are watching</h2>
-      <a onclick="return FB.login()" href="/"
+      <a onclick="login()"
         <img src="{{ static_url('images/fb1.jpg') }}" onclick="login()" alt=""/>
       </a>
     </div> 
