FB login & logout maybe are working.

--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -17,7 +17,7 @@
       <h1>めんご</h1>
       <h2>Login to see what your friends are watching</h2>
       <a onclick="login()"
-        <img src="{{ static_url('images/fb1.jpg') }}" onclick="login()" alt=""/>
+        <img src="{{ static_url('images/fb1.jpg') }}" alt=""/>
       </a>
     </div> 
 
