--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -23,6 +23,7 @@
 
     <div id="fb-root"></div>
     <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
+    <script src="{{ static_url("javascript/main.js") }}"></script>
     <script type="text/javascript">
       FB.init({
         appId  : '204128796282802',
