FB login tested as working!"

--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -16,7 +16,7 @@
     <div class="right">
       <h1>めんご</h1>
       <h2>Login to see what your friends are watching</h2>
-      <a onclick="login()"
+      <a href="#" onclick="login()"
         <img src="{{ static_url('images/fb1.jpg') }}" alt=""/>
       </a>
     </div> 
