--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="right">
-      <a onclick="logout()">Logout</a>
+      <a href="#" onclick="logout()">Logout</a>
     </div>
 
     <div id="fb-root"></div>
