--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -45,11 +45,10 @@ div.identity { font-size: 12px; }
 div.identity img { width: 50px; height: 50px; padding-right: 7px; float: left; }
 
 ul.link-list { padding: 7px 0; }
-ul.link-list li { padding: 5px 10px; border-bottom: 1px solid transparent; border-right: 1px solid transparent; }
+ul.link-list li { padding: 5px 10px; border-bottom: 1px solid transparent; border-right: 1px solid transparent; cursor: pointer; }
 ul.link-list li:hover { border-bottom: 1px solid #7FFF24; border-right: 1px solid #7FFF24; }
 ul.link-list li.active { background-color: #e1ffcc; }
-ul.link-list li a { width: 100%; display: block; }
-ul.link-list li a:hover { text-decoration: none; cursor: pointer; }
+ul.link-list li a:hover { text-decoration: none; }
 
 ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 
