--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -47,6 +47,8 @@
         cookie : true, // enable cookies to allow the server to access the session
         xfbml  : true  // parse XFBML
       });
+
+      rest_feed({ url: "/api/wall" });
     </script>
 
   </body>
