Working on javascript for rest feed.

--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -24,12 +24,9 @@
         </ul>
     </div>
 
-    <div class="center">
+    <div id="feed" class="center">
       <input type="text" size="30" value="Share a link"/>
-      <ul class="news-feed">
-        <li><p><a href>Jessica Ahern</a> likes <a href>Cheezburgers Aladdin</a></p></li>
-        <li><p><a href>Jessica Ahern</a> likes <a href>Cheezburgers Aladdin</a></p></li>
-      </ul>
+      <ul class="list"></ul>
     </div>
 
     <div class="right">
