--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -21,9 +21,9 @@ a:hover { text-decoration: underline; }
 /* Base Styles */
 body { width: 950px; margin: 0 auto; font-family: Ubuntu; color: #7FFF24; } 
 body > .top { width: 100%; height: 70px; }
-body > .left { width: 180px; float: left; }
+body > .left { width: 200px; float: left; }
 body > .center { width: 460px; padding: 0 30px; float: left; }
-body > .right { width: 250px; float: left; }
+body > .right { width: 230px; float: left; }
 
 
 p { padding: 3px 0; }
@@ -41,7 +41,7 @@ input:focus { outline: 5px auto #e1ffcc; }
 
 /* Component Styles */
 
-div.identity { font-size: 12px; }
+div.identity { margin-top: 20px; font-size: 12px; }
 div.identity img { width: 50px; height: 50px; padding-right: 7px; float: left; }
 
 ul.link-list { padding: 7px 0; }
