--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -19,11 +19,7 @@ a:hover { text-decoration: underline; }
 
 
 /* Base Styles */
-body { width: 950px; margin: 0 auto; font-family: Ubuntu; color: #7FFF24; } 
-body > .top { width: 100%; height: 70px; }
-body > .left { width: 200px; float: left; background-color: #E1FFCC; }
-body > .center { width: 460px; padding: 0 30px; float: left; }
-body > .right { width: 230px; float: left; }
+body { width: 950px; margin: 70px auto 0; font-family: Ubuntu; color: #7FFF24; } 
 
 
 p { padding: 3px 0; }
@@ -40,6 +36,9 @@ input:focus { outline: 5px auto #e1ffcc; }
 
 
 /* Component Styles */
+body > .left { width: 200px; float: left; background-color: #E1FFCC; }
+body > .center { width: 460px; padding: 0 30px; float: left; }
+body > .right { width: 230px; float: left; }
 
 div.identity { margin-top: 20px; font-size: 12px; }
 div.identity img { width: 50px; height: 50px; padding-right: 7px; float: left; }
