--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -36,12 +36,12 @@ input:focus { outline: 5px auto #e1ffcc; }
 
 
 /* Component Styles */
-body > .left { width: 200px; float: left; background-color: #E1FFCC; padding: 20px 7px 20px 20px; }
+body > .left { width: 173px; float: left; background-color: #E1FFCC; padding: 20px 7px 20px 20px; }
 body > .center { width: 460px; padding: 0 30px; float: left; }
 body > .right { width: 230px; float: left; }
 
 div.identity { font-size: 12px; }
-div.identity img { width: 50px; height: 50px; float: left; }
+div.identity img { width: 50px; height: 50px; float: left; margin-right: 8px; }
 
 ul.link-list { padding: 7px 0; }
 ul.link-list li { padding: 5px 10px; border-bottom: 1px solid transparent; border-right: 1px solid transparent; cursor: pointer; }
