--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -46,7 +46,7 @@ div.identity img { width: 50px; height: 50px; float: left; margin-right: 8px; }
 ul.link-list { padding: 7px 0; }
 ul.link-list li { padding: 5px 10px; cursor: pointer; }
 ul.link-list li:hover { background-color: #7FFF24; }
-ul.link-list li.active { background-color: #e1ffcc; }
+ul.link-list li.active { background-color: #E1FFCC; }
 ul.link-list li a { height: 100%; width: 100%; display: block; }
 ul.link-list li a:hover { text-decoration: none; }
 
