--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -6,7 +6,7 @@
       <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css">
       <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
   </head>
-  <body>
+  <body id="feed">
     <div class="left">
         <div class="identity clearfix">
           <img src="{{ static_url('images/frog1.jpg') }}"/>
