--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -9,11 +9,11 @@
   </head>
 
   <body id="landing">
-    <div class="landing-left">
+    <div class="left">
       <h1>めんご</h1>
       <img src="{{ static_url('images/frog1.jpg') }}" height="266" width="400" alt=""/>
     </div>
-    <div class="landing-right">
+    <div class="right">
       <h1>めんご</h1>
       <h2>Login to see what your friends are watching</h2>
       <a href="#" onclick="login()">
