--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -6,6 +6,18 @@
     <title>MengoMengo: Social TV</title>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
+
+    <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
+    <script type="text/javascript" src="{{ static_url("javascript/main.js") }}"></script>
+    <script type="text/javascript">
+      FB.init({
+        appId  : '204128796282802',
+        status : true, // check login status
+        cookie : true, // enable cookies to allow the server to access the session
+        xfbml  : true  // parse XFBML
+      });
+    </script>
+
   </head>
 
   <body id="landing">
@@ -22,16 +34,6 @@
     </div> 
 
     <div id="fb-root"></div>
-    <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
-    <script src="{{ static_url("javascript/main.js") }}"></script>
-    <script type="text/javascript">
-      FB.init({
-        appId  : '204128796282802',
-        status : true, // check login status
-        cookie : true, // enable cookies to allow the server to access the session
-        xfbml  : true  // parse XFBML
-      });
-    </script>
 
   </body>
 </html>
