--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -7,9 +7,9 @@
     <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
 
-    <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
-    <script type="text/javascript" src="{{ static_url("javascript/main.js") }}"></script>
-    <script type="text/javascript">
+    <script src="http://connect.facebook.net/en_US/all.js"></script>
+    <script src="{{ static_url("javascript/main.js") }}"></script>
+    <script>
       FB.init({
         appId  : '204128796282802',
         status : true, // check login status
