--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -10,11 +10,13 @@
     <script src="http://connect.facebook.net/en_US/all.js"></script>
     <script src="{{ static_url("javascript/main.js") }}"></script>
     <script>
-      FB.init({
-        appId  : '204128796282802',
-        status : true, // check login status
-        cookie : true, // enable cookies to allow the server to access the session
-        xfbml  : true  // parse XFBML
+      $.getScript('http://connect.facebook.net/en_US/all.js',function(){
+        FB.init({
+          appId  : '204128796282802',
+          status : true, // check login status
+          cookie : true, // enable cookies to allow the server to access the session
+          xfbml  : true  // parse XFBML
+        });
       });
     </script>
 
