--- a/app/views/connect.html
+++ b/app/views/connect.html
@@ -7,7 +7,7 @@
     <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
 
-    <script src="http://connect.facebook.net/en_US/all.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
     <script src="{{ static_url("javascript/main.js") }}"></script>
     <script>
       $.getScript('http://connect.facebook.net/en_US/all.js',function(){
