--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -36,9 +36,9 @@ input:focus { outline: 5px auto #e1ffcc; }
 
 
 /* Component Styles */
-body#feed > .left { width: 173px; float: left; background-color: #E1FFCC; padding: 20px 7px 20px 20px; }
-body#feed > .center { width: 460px; padding: 0 30px; float: left; }
-body#feed > .right { width: 230px; float: left; }
+#feed > .left { width: 173px; float: left; background-color: #E1FFCC; padding: 20px 7px 20px 20px; }
+#feed > .center { width: 460px; padding: 0 30px; float: left; }
+#feed > .right { width: 230px; float: left; }
 
 div.identity { font-size: 12px; }
 div.identity img { width: 50px; height: 50px; float: left; margin-right: 8px; }
