--- a/app/views/base.html
+++ b/app/views/base.html
@@ -23,6 +23,7 @@
         cookie : true, // enable cookies to allow the server to access the session
         xfbml  : true  // parse XFBML
       });
+      {% block javascript %}{% end %}
     </script>
 
   </body>
