--- a/app/views/player.html
+++ b/app/views/player.html
@@ -1,7 +1,5 @@
+{% set title = 'title of the page' %}
 {% extends "base.html" %}
-{{title}}
-{% set title = 'Title of the page' %}
-{{title}}
 {% block body %}
   {% include "_navbar.html" %}
   <div id="player-page">
