--- a/app/views/base.html
+++ b/app/views/base.html
@@ -1,10 +1,11 @@
+{% set title = 'MengoMengo: Social TV' %}
 {% block pre %}{% end %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en">
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>{%try%}{{title}}{%except%}MengoMengo: Social TV{% end %}</title>
+    <title>{{title}}</title>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
 
