--- a/app/views/_navbar.html
+++ b/app/views/_navbar.html
@@ -1,5 +1,5 @@
-<div style="width: 100%; background-color: #0F0;">
-  <div style="float: left">{{title}}</div>
-  <a style="float: right" href="/logout">Logout</a>
-  <a style="float: right" href="/">Home</a>
+<div class="clearfix">
+  <span>{{title}}</span>
+  <a href="/">Home</a>
+  <a href="/logout">Logout</a>
 </div>
