Player page layout might be working.

--- a/app/views/_navbar.html
+++ b/app/views/_navbar.html
@@ -1,5 +1,8 @@
-<div class="clearfix">
-  <span>{{title}}</span>
-  <a href="/">Home</a>
-  <a href="/logout">Logout</a>
+<div id="navbar">
+  <div>
+    <span>{{title}}</span>
+    <a href="/">Home</a>
+    <a href="/friends">Friends</a>
+    <a >Account</a>
+  </div>
 </div>
