Player page layout might be working.

--- a/app/views/player.html
+++ b/app/views/player.html
@@ -20,16 +20,16 @@
       <tr>
         <td></td>
         <td>
-          <img id="play" src="{{ static_url("/images/play.png") }}"/>
+          <img id="play" src="{{ static_url("images/play.png") }}"/>
         </td>
       </tr>
       <tr>
         <td>
-          <img id="prev" src="{{ static_url("/images/play.png") }}"/>
+          <img id="prev" src="{{ static_url("images/play.png") }}"/>
         </td>
         <td></td>
         <td>
-          <img id="next" src="{{ static_url("/images/play.png") }}"/>
+          <img id="next" src="{{ static_url("images/play.png") }}"/>
         </td>
       </tr>
     </table>
