--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -55,10 +55,10 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #navbar a { padding: 0.5em 1em; border: 1px solid #FFF; }
 
 #player-page { width: 950px; margin: 0px auto; }
-#player-page h1 { margin: 2em 75px; font-size: 30px; color: #FBB829; }
-#player-page #play { width: 550px; }
+#player-page h1 { margin: 1em 75px; font-size: 30px; color: #FBB829; }
+#player-page #play { width: 550px; height: 320px; }
 #player-page #prev, #player-page #next { 
-  width: 100px; margin: -50px 50px 0; 
+  width: 100px; margin: 0 50px; position: relative; top: -50px; 
 }
 
 #landing h1 { padding: 50px 0; text-align: center; font-weight: bold; font-size: 90px; color: #FBB829; }
