Player page looks great. Moving onto wall.

--- a/app/views/player.html
+++ b/app/views/player.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pre %}
-  {% set title = 'Itazura Na Kiss' %}
+  {% set title = 'Itazura Na Kiss (Episode 23, Part 2)' %}
 {% end %}
 
 {% block javascript %}
