--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -50,7 +50,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 
 /* Page Styles */
 #navbar { padding-top: 20px; background-color: #FBB829; color: #FFF; text-align: right; }
-#navbar div { width: 950px; margin: 0px auto; background-color: #7FFF24; }
+#navbar div { width: 950px; margin: 0px auto; background-color: #7FFF24; height: 1.5em; line-height: 1.5em; }
 #navbar span { float: left; margin-left: 2em; }
 #navbar a { padding: 0.5em 1em; color: #FFF; border: 1px solid #FFF; }
 #navbar a:hover { background-color: #7FFF24; text-decoration: none; }
