--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -68,6 +68,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #landing .left img { display: block; margin: 0 auto; border: 25px solid #7FFF24; rounded-corner: 5px; }
 #landing .right img { display: table; margin: 0 auto; }
 
+#feed { width: 950px; margin: 50px auto 0; }
 #feed > .left { width: 173px; float: left; background-color: #E1FFCC; padding: 20px 7px 20px 20px; }
 #feed > .center { width: 460px; padding: 0 30px; float: left; }
 #feed > .right { width: 230px; float: left; }
