--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -4,28 +4,15 @@
 
 <div id="feed">
 
-  <div class="left">
-    <div class="identity clearfix">
-      <img src="{{ static_url('images/frog1.jpg') }}"/>
-      <p class="name">Andrew Johnson</p>
-      <p class="link"><a href>Facebook Profile</a></p>
-    </div>
-    <ul class="link-list">
-      <li class="active"><a href>Status</a></li>
-      <li><a href>Friends</a></li>
-      <li><a href>Subscriptions</a></li>
-      <li><a href>Playlists</a></li>
-    </ul>
-  </div>
-
   <div id="feed" class="center">
     <input type="text" size="30" value="Share a link"/>
     <ul class="list"></ul>
   </div>
 
-  <div class="right">
-    <a href="#" onclick="logout()">Logout</a>
-  </div>
+  <ul class="right">
+    <li>Ads go here</li>
+    <li>Ads go here</li>
+  </ul>
 
 </div>
 {% end %}
