--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -69,8 +69,8 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #landing .right img { display: table; margin: 0 auto; }
 
 #feed { width: 950px; margin: 50px auto 0; }
-#feed > .center { float: left; width: 600px; padding: 0 20px; }
-#feed > .right { float: left; width: 310px; background-color: #E1FFCC; }
-#feed > .right li { height: 300px; width: 310px; background-color: #333; text-align: center; line-height: 300px; }
+#feed > .center { float: left; width: 680px; padding: 0 20px; }
+#feed > .right { float: left; width: 270px; background-color: #E1FFCC; }
+#feed > .right li { height: 300px; width: 250px; margin: 10px; background-color: #333; text-align: center; line-height: 300px; }
 
 
