Player page looks great. Moving onto wall.

--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -4,10 +4,8 @@
 
 <div id="feed">
 
-  <div id="feed" class="center">
-    <input type="text" size="30" value="Share a link"/>
-    <ul class="list"></ul>
-  </div>
+  <ul class="center list">
+  </ul>
 
   <ul class="right">
     <li>Ads go here</li>
