Player page looks great. Moving onto wall.

--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -4,8 +4,10 @@
 
 <div id="feed">
 
-  <ul class="center list">
-  </ul>
+  <div class="center">
+    <input type="text" value="Share a list" size="30/>
+    <ul class="list"></ul>
+  </div>
 
   <ul class="right">
     <li>Ads go here</li>
