Player page looks great. Moving onto wall.

--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -4,7 +4,7 @@
 
 <div id="feed">
 
-  <div class="center">
+  <div class="left">
     <input type="text" value="Share a list" size="30/>
     <ul class="list"></ul>
   </div>
