--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -83,6 +83,10 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 
 #wall { width: 950px; margin: 50px auto 0; }
 #wall > .left { float: left; width: 630px; }
+#wall > .left > div .h2 { float: left; }
+#wall > .left > div button { float: right; }
+#wall .list li { margin: 10px 0; padding: 5px 10px; border: #000; background-color: #0F0; }
+#wall .list li img { height: 50px; width: 50px; float: left; }
 #wall > .right { float: right; width: 270px; background-color: #E1FFCC; }
 #wall > .right li { height: 300px; width: 250px; margin: 10px; background-color: #333; text-align: center; line-height: 300px; }
 
