--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -5,7 +5,10 @@
 <div id="wall">
 
   <div class="left feed">
-    <button type="submit"/>Upload a Video</button>
+    <div>
+      <h2>News Feed</h2>
+      <button type="submit">Upload a Video</button>
+    </div>
     <ul class="list">
       {% for video in [ {'group':'Naruto', 'order':'Episode 22', 'title':'Fight to the death!', 'img':'x' }, {'group':'iJustine', 'order':'Episode 67', 'title':'Why am I glowing?', 'img':'x'} ] %}
         <li>
