--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -5,7 +5,7 @@
 <div id="wall">
 
   <div class="left feed">
-    <div>
+    <div class="clearfix">
       <h2>News Feed</h2>
       <button type="submit">Upload a Video</button>
     </div>
