--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -89,7 +89,19 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #wall > .left > div { padding-bottom: 10px; }
 #wall > .left > div h2 { float: left; line-height: 34px; padding-left: 10px; }
 #wall > .left > div button { float: right; }
-#wall .list li { margin: 10px 0; padding: 5px 10px; border: #000; background-color: #0F0; }
+#wall .list li { margin: 10px 0; padding: 5px 10px; border: #000; background-color: #0F0; 
+  -moz-border-radius:5px 5px 5px 5px;
+  -moz-box-shadow:1px 1px 0 #0F0 inset, 1px 1px 0 #080;
+  background:-moz-linear-gradient(center top , #7FFF24 0pt, #0F0 100%) repeat scroll 0 0 transparent;
+  color:#CDE2F4;
+  font-size:14px;
+  font-weight:600;
+  letter-spacing:0;
+  padding:5px 10px;
+  text-decoration:none;
+  text-shadow:0 -1px #16558B;
+
+}
 #wall .list li img { height: 50px; width: 50px; float: left; padding-right: 10px; }
 #wall > .right { float: right; width: 270px; background-color: #E1FFCC; }
 #wall > .right li { height: 300px; width: 250px; margin: 10px; background-color: #333; text-align: center; line-height: 300px; }
