Styling wall page

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -23,15 +23,14 @@ body { font-family: Ubuntu; color: #333; }
 
 button { 
   -moz-border-radius:5px 5px 5px 5px;
-  -moz-box-shadow:1px 1px 0 #78D3FF inset, 1px 1px 0 #003265;
-  background:-moz-linear-gradient(center top , #2484C7 0pt, #0072B5 100%) repeat scroll 0 0 transparent;
-  color:#CDE2F4;
+  -moz-box-shadow:1px 1px 0 #E1FFCC inset, 1px 1px 0 #363;
+  background:-moz-linear-gradient(center top #E1FFCC,  0pt, #E1FFCC 100%) repeat scroll 0 0 transparent;
+  color:#363;
   font-size:14px;
   font-weight:600;
   letter-spacing:0;
   padding:5px 10px;
   text-decoration:none;
-  text-shadow:0 -1px #16558B;
 }
 p { padding: 3px 0; }
 
@@ -87,7 +86,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #wall { width: 950px; margin: 50px auto 0; }
 #wall > .left { float: left; width: 630px; }
 #wall > .left > div { padding-bottom: 20px; }
-#wall > .left > div h2 { float: left; line-height: 34px; padding-left: 10px; color: #7FFF24; }
+#wall > .left > div h2 { float: left; line-height: 34px; padding-left: 10px; color: #FBB829; }
 #wall > .left > div button { float: right; }
 #wall .list li { 
   margin: 10px 0; padding: 5px 10px; border: #000; background-color: #0F0; 
