--- a/app/views/player.html
+++ b/app/views/player.html
@@ -28,7 +28,7 @@
           <img id="prev" src="{{ static_url("images/play.png") }}"/>
         </td>
         <td>
-          <fb:comments url="{{request.uri}}" width="550px" height="600px" simple="1" css="http://www.hsiet.com/winery/style.css"></fb:comments>
+          <fb:comments url="{{request.uri}}" width="550px" height="600px" simple="1" css="{{ static_url('styles/main.css') }}"></fb:comments>
         </td>
         <td>
           <img id="next" src="{{ static_url("images/play.png") }}"/>
