--- a/app/views/base.html
+++ b/app/views/base.html
@@ -5,6 +5,7 @@
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta property="fb:admins" content="100000273342150" />
     <title>{{title}}</title>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
