--- a/app/views/base.html
+++ b/app/views/base.html
@@ -1,11 +1,11 @@
 {% set title = 'MengoMengo: Social TV' %}
 {% block pre %}{% end %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" lang="en">
-
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta property="fb:admins" content="100000273342150" />
+    <meta property="fb:app_id" content="204128796282802" />
     <title>{{title}}</title>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
