--- a/app/views/player.html
+++ b/app/views/player.html
@@ -28,6 +28,8 @@
           <img id="prev" src="{{ static_url("images/play.png") }}"/>
         </td>
         <td>
+          <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=139154009487012&amp;xfbml=1"></script><fb:comments href="mengomengo.com" num_posts="10" width="550">
+          </fb:comments>
           <fb:comments url="{{request.uri}}" width="550px" height="600px" simple="1" css="{{ static_url('styles/main.css') }}"></fb:comments>
         </td>
         <td>
