--- a/app/views/base.html
+++ b/app/views/base.html
@@ -15,7 +15,7 @@
     {% block body %}{% end %}
 
     <div id="fb-root"></div>
-    <script src="#appId=204128796282802&amp;xfbml=1"></script>
+    <script src="http://connect.facebook.net/en_US/all.js#appId=204128796282802&amp;xfbml=1"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
     <script src="{{ static_url("javascript/main.js") }}"></script>
     <script>
